--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "express": "^4.19.0",
     "socket.io": "^4.7.5",
-    "nanoid": "^5.0.7"
+    "nanoid": "^5.0.7",
+    "cors": "^2.8.5"
   }
 }
